Added python grammar definition
added python grammar and made the necessary changes to forest.rkt to
make it work.

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,37 @@ out.txt
 *.forest~
 
 out2.txt
+
+*.bak
+
+*.bak
+
+*.scm~
+
+test/.idea/.name
+
+test/.idea/encodings.xml
+
+test/.idea/inspectionProfiles/profiles_settings.xml
+
+test/.idea/misc.xml
+
+test/.idea/modules.xml
+
+test/.idea/other.xml
+
+test/.idea/scopes/scope_settings.xml
+
+test/.idea/test.iml
+
+test/.idea/testrunner.xml
+
+test/.idea/vcs.xml
+
+test/.idea/workspace.xml
+
+*.pyc
+
+*.rkt~
+
+*.bak
