made java typechecking almost work
- replaced import with extend and include
- implemented java grammar typecheck function (still incomplete)
- reworked term and token structs to do equal and hash
- removed literal core lang

--- a/.gitignore
+++ b/.gitignore
@@ -123,3 +123,7 @@ cache/standard.rules.forest,standard.patterns.forest,core.rules.forest,core.patt
 *.deps
 
 test/.idea/inspectionProfiles/Project_Default.xml
+
+out
+
+.cleanup
